page height isn't fixed, so body overflow hidden

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,5 +1,5 @@
 body {
-    /* overflow-y: hidden; */
+    overflow-y: hidden;
     height: 100vh;
     margin: 0;
 }
